fix overflow mobile

--- a/src/molecules/NavigationMenu/Navigation.scss
+++ b/src/molecules/NavigationMenu/Navigation.scss
@@ -21,7 +21,7 @@ nav {
             background: url(../../assets/loader.svg) center center no-repeat;
             background-size: contain;
             @media only screen and (max-width: 1289px) {
-                margin-top: -45px;
+                margin-top: -90px;
                 margin-left: -45px;
             }
         }
