--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -26,6 +26,11 @@ html {
                 transition: all .2s ease-in-out;
             }
         }
+        @media only screen and (max-width: 1289px) {
+            section {
+                overflow: hidden;
+            }
+        }
 
         nav, #section-one, #section-two {
             padding: 0 12vw;
